# mixsuite

./: .gitignore  CMakeLists.txt
Source/: CanvasComponent.cpp  CanvasComponent.h  DSPEngine.cpp  DSPEngine.h  EQComponent.cpp  EQComponent.h  InstanceListComponent.cpp  InstanceListComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedAnalyserState.cpp  SharedAnalyserState.h  SharedMixerState.cpp  SharedMixerState.h  SpectrumAnalyser.h  SpectrumComponent.cpp  SpectrumComponent.h  StereoScope.h  TrackState.cpp  TrackState.h
